# squint

./: .fallowrc.json  .gitignore  AGENTS.md  README.md  index.html  package-lock.json  package.json  postcss.config.js  tailwind.config.js  vite.config.ts
.github/workflows/: release.yml
docs/: releasing.md
src/: index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs  main.rs  menu.rs
src-tauri/src/commands/: agent.rs  ai.rs  attachments.rs  detect.rs  git.rs  mod.rs  replace.rs  repository.rs  search.rs  setup.rs  terminal.rs
src-tauri/src/db/: mod.rs  models.rs
src/app/: App.tsx  app.tsx  commands.ts  keyboard.ts  menu-events.ts  menuEvents.ts
src/components/: AiOutputDialog.tsx  BinaryPreviewPane.tsx  BranchMenu.tsx  CommandPalette.tsx  CommitComposer.tsx  ConfirmDialog.tsx  DiffEditor.tsx  DiffInline.tsx  DiffPane.tsx  DiffSideBySide.tsx  DiffSingle.tsx  EditorMenu.tsx  FileRow.tsx  FileTree.tsx  FoldButton.tsx  GitMenu.tsx  HLLine.tsx  HunkActionBar.tsx  HunkStagePopover.tsx  IconBtn.tsx  Icons.tsx  InFileSearchBar.tsx  Kbd.tsx  NoRepoState.tsx  OnboardingModal.tsx  Overlay.tsx  PrBranchChoiceDialog.tsx  PrFlowDialog.tsx  ReplaceOverlay.tsx  RepoMenu.tsx  ResizeHandle.tsx  SearchPanel.tsx  SettingsDialog.tsx  ShortcutsDialog.tsx  Sidebar.tsx  StashPromptDialog.tsx  TabStrip.tsx  Toast.tsx  TopBar.tsx  ai-output-dialog.tsx  (+39 more)
src/components/board/: action-icon.tsx  board-column.tsx  board-view.tsx  card-detail-modal.tsx  card-tile.tsx  chip-popover.tsx  new-card-dialog.tsx  project-scripts-dialog.tsx  project-setup-dialog.tsx  project-sidebar.tsx
src/components/ui/: button.tsx
src/features/ai/: ai.api.ts  ai.types.ts
src/features/board/: board.api.ts  board.store.ts
src/features/git/: git.api.ts  git.types.ts
src/features/replace/: replace.api.ts  replace.types.ts
src/features/repository/: repository.api.ts  repository.store.ts  repository.types.ts
src/features/search/: search.api.ts  search.types.ts
src/features/terminal/: terminal.api.ts
src/hooks/: use-dismissable-layer.ts
src/lib/: btn.ts  findInDiff.ts  notify.ts  parse-diff.ts  parseDiff.ts  patch.ts  paths.ts  sections.ts  tauri.ts  theme.ts  tokenize.ts  tree.ts  utils.ts
